--- a/sample02/bower.json
+++ b/sample02/bower.json
@@ -15,6 +15,8 @@
   ],
   "dependencies": {
     "angularjs": "~1.3.15",
-    "bootstrap": "~3.3.4"
+    "bootstrap": "~3.3.4",
+    "jquery": "~2.1.3",
+    "jquery-ui": "~1.11.4"
   }
 }
