--- a/sample02/bower.json
+++ b/sample02/bower.json
@@ -17,6 +17,7 @@
     "angularjs": "~1.3.15",
     "bootstrap": "~3.3.4",
     "jquery": "~2.1.3",
-    "jquery-ui": "~1.11.4"
+    "jquery-ui": "~1.11.4",
+    "angular-i18n": "~1.3.15"
   }
 }
